@@ -273,7 +273,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_create" eval="True"/>
             <field name="perm_delete" eval="False"/>
         </record>
-         <record model="ir.model.access" id="access_product_template_manage_group">
+        <record model="ir.model.access" id="access_product_template_manage_group">
             <field name="model" search="[('model', '=', 'product.template')]"/>
             <field name="group" ref="group_commission_manage"/>
             <field name="perm_read" eval="True"/>
